--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -46,6 +46,11 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">24sp</item>
     </style>
+    <style name="subtitle_gray">
+        <item name="fontFamily">@font/pretendard</item>
+        <item name="android:textColor">@color/gray</item>
+        <item name="android:textSize">24sp</item>
+    </style>
 
     <style name="medium">
         <item name="fontFamily">@font/pretendard</item>
@@ -62,6 +67,12 @@
     <style name="body">
         <item name="fontFamily">@font/pretendard</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="body_gray">
+        <item name="fontFamily">@font/pretendard</item>
+        <item name="android:textColor">@color/gray</item>
         <item name="android:textSize">16sp</item>
     </style>
 
