--- a/app/src/main/res/layout/fragment_cycle.xml
+++ b/app/src/main/res/layout/fragment_cycle.xml
@@ -154,9 +154,10 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
+            android:layout_width="280dp"
             android:layout_height="0dp"
             android:layout_marginTop="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/btn_next"
             app:layout_constraintTop_toBottomOf="@id/cl_cycle_alarm_add" />
 
@@ -166,7 +167,6 @@
         android:layout_width="match_parent"
         android:layout_height="72dp"
         android:background="@color/gray"
-        android:enabled="false"
         android:text="등록하기"
         android:textColor="@color/dark_gray"
         app:layout_constraintBottom_toBottomOf="parent"
