feat: schedule layout 완료

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,5 +17,6 @@
     <color name="light_gray">#E9E9E9</color>
     
     <color name="beige">#FFDBFBE8</color>
+    <color name="bright_gray_green">#FFE2EEE1</color>
 
 </resources>
