--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -1,14 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.schedule.ScheduleFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ui.schedule.ScheduleFragment"
+    android:background="@color/white"
+    android:paddingTop="13dp"
+    android:paddingHorizontal="13dp">
 
-    <!-- TODO: Update blank fragment layout -->
+    <ImageView
+        android:layout_width="170dp"
+        android:layout_height="170dp"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
+        android:src="@drawable/bg_logo"/>
+
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/date_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
 
-</FrameLayout>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+
+        android:text="2024.12.12"
+        style="@style/subtitle"
+        />
+
+    <ImageView
+        android:id="@+id/open_calendar_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+
+        app:layout_constraintTop_toTopOf="@id/date_tv"
+        app:layout_constraintBottom_toBottomOf="@id/date_tv"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        android:src="@drawable/calendar"
+        />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/today_alarm_rv"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+
+        app:layout_constraintTop_toBottomOf="@id/date_tv"
+        app:layout_constraintBottom_toBottomOf="parent"
+
+        android:layout_marginTop="24dp"
+
+        tools:listitem="@layout/today_alarm_item"
+        />
+
+
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
