--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -116,31 +116,24 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/vp_today_medicine"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/home_rv_today_medicine_group"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            tools:itemCount="2"
+            tools:listitem="@layout/item_home_today_medicine_group" />
 
-        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
-            android:id="@+id/dots_indicator"
+        <TextView
+            android:id="@+id/home_alarm_view_more"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            app:dotsColor="@color/gray"
-            app:dotsCornerRadius="8dp"
-            app:dotsSize="4dp"
-            app:dotsSpacing="4dp"
-            app:dotsWidthFactor="5"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="@string/view_more"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/vp_today_medicine"
-            app:progressMode="false"
-            app:selectedDotColor="@color/dark_green" />
+            app:layout_constraintTop_toBottomOf="@+id/home_rv_today_medicine_group" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
@@ -159,7 +152,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/home_cl_bg_connection"
         android:elevation="3dp"
@@ -168,50 +161,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/home_connection_1">
-
-        <ImageView
-            android:id="@+id/home_connection_2_icon"
-            android:layout_width="79dp"
-            android:layout_height="79dp"
-            android:src="@drawable/icon_pharmacy_label"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/home_connection_2_title"
-            style="@style/body_b"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="14dp"
-            android:layout_marginTop="8dp"
-            android:text="즐겨찾기한 약국"
-            app:layout_constraintStart_toEndOf="@+id/home_connection_2_icon"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/home_connection_2_desc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:text="내가 찜한 약국 확인"
-            app:layout_constraintStart_toStartOf="@+id/home_connection_2_title"
-            app:layout_constraintTop_toBottomOf="@+id/home_connection_2_title" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/home_connection_3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/home_cl_bg_connection"
-        android:elevation="3dp"
-        android:padding="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/home_connection_2">
 
         <ImageView
             android:id="@+id/home_connection_3_icon"
