--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -1,64 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.schedule.ScheduleFragment"
     android:background="@color/white"
     android:paddingTop="13dp"
     android:paddingHorizontal="13dp">
 
-    <ImageView
-        android:layout_width="170dp"
-        android:layout_height="170dp"
-
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-
-        android:src="@drawable/bg_logo"/>
-
-    <TextView
-        android:id="@+id/date_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-
-        android:text="2024.12.12"
-        style="@style/subtitle"
-        />
-
-    <ImageView
-        android:id="@+id/open_calendar_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-
-        app:layout_constraintTop_toTopOf="@id/date_tv"
-        app:layout_constraintBottom_toBottomOf="@id/date_tv"
-        app:layout_constraintEnd_toEndOf="parent"
-
-        android:src="@drawable/calendar"
-        />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/today_alarm_rv"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
 
-        app:layout_constraintTop_toBottomOf="@id/date_tv"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
 
-        android:layout_marginTop="24dp"
+        android:orientation="vertical"
+        >
 
-        tools:listitem="@layout/today_alarm_item"
-        />
+        <TextView
+            android:id="@+id/date_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+
+            android:text="2024.12.12"
+            style="@style/subtitle"
+            />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+
+            <ImageView
+                android:layout_width="170dp"
+                android:layout_height="170dp"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+
+                android:src="@drawable/bg_logo"/>
 
 
 
+            <ImageView
+                android:id="@+id/open_calendar_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
 
+                app:layout_constraintTop_toTopOf="@id/date_tv"
+                app:layout_constraintBottom_toBottomOf="@id/date_tv"
+                app:layout_constraintEnd_toEndOf="parent"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+                android:src="@drawable/calendar"
+                />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/today_alarm_rv"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+
+                app:layout_constraintTop_toBottomOf="@id/date_tv"
+                app:layout_constraintBottom_toBottomOf="parent"
+
+                android:layout_marginTop="24dp"
+
+                tools:listitem="@layout/today_alarm_item"
+                />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </LinearLayout>
+
+</ScrollView>
