fix: layout margin

--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -18,17 +18,39 @@
         android:orientation="vertical"
         >
 
-        <TextView
-            android:id="@+id/date_tv"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            >
 
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            <TextView
+                android:id="@+id/date_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
 
-            android:text="2024.12.12"
-            style="@style/subtitle"
-            />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+
+                android:text="2024.12.12"
+                style="@style/subtitle"
+                />
+
+            <ImageView
+                android:id="@+id/open_calendar_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+
+                app:layout_constraintTop_toTopOf="@id/date_tv"
+                app:layout_constraintBottom_toBottomOf="@id/date_tv"
+                app:layout_constraintEnd_toEndOf="parent"
+
+                android:src="@drawable/calendar"
+                />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -47,26 +69,12 @@
                 android:src="@drawable/bg_logo"/>
 
 
-
-            <ImageView
-                android:id="@+id/open_calendar_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-
-                app:layout_constraintTop_toTopOf="@id/date_tv"
-                app:layout_constraintBottom_toBottomOf="@id/date_tv"
-                app:layout_constraintEnd_toEndOf="parent"
-
-                android:src="@drawable/calendar"
-                />
-
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/today_alarm_rv"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
 
-                app:layout_constraintTop_toBottomOf="@id/date_tv"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
 
                 android:layout_marginTop="24dp"
 
