--- a/app/src/main/res/layout/activity_ocr.xml
+++ b/app/src/main/res/layout/activity_ocr.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ui.textrecognition.OCRActivity">
 
     <androidx.camera.view.PreviewView
         android:id="@+id/viewFinder"
@@ -22,7 +22,7 @@
         android:layout_alignParentStart="true" />
 
     <Button
-        android:id="@+id/image_capture_button"
+        android:id="@+id/take_photo_btn"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:elevation="2dp"
@@ -33,7 +33,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
-        android:id="@+id/video_capture_button"
+        android:id="@+id/select_photo_btn"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_marginEnd="16dp"
