--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -6,82 +6,39 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.schedule.ScheduleFragment"
     android:background="@color/white"
-    android:paddingTop="13dp"
-    android:paddingHorizontal="13dp">
+    android:paddingVertical="13dp"
+    android:paddingHorizontal="13dp"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
-        app:layout_constraintTop_toTopOf="parent"
-
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         >
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/profile_rv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+
+            android:orientation="horizontal"
+            android:scrollbars="horizontal"
+
+            tools:listitem="@layout/schedule_profile_item"
+            />
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/view_pager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
+            android:layout_marginTop="13dp"
             >
 
-            <TextView
-                android:id="@+id/date_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
 
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-
-                android:text="2024.12.12"
-                style="@style/subtitle"
-                />
-
-            <ImageView
-                android:id="@+id/open_calendar_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-
-                app:layout_constraintTop_toTopOf="@id/date_tv"
-                app:layout_constraintBottom_toBottomOf="@id/date_tv"
-                app:layout_constraintEnd_toEndOf="parent"
-
-                android:src="@drawable/calendar"
-                />
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
-
-            <ImageView
-                android:layout_width="170dp"
-                android:layout_height="170dp"
-
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-
-                android:src="@drawable/bg_logo"/>
-
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/today_alarm_rv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-
-                app:layout_constraintTop_toTopOf="parent"
-
-                android:layout_marginTop="24dp"
-
-                tools:listitem="@layout/schedule_item"
-                />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.viewpager2.widget.ViewPager2>
 
     </LinearLayout>
-
 </ScrollView>
