--- a/app/src/main/res/layout/schedule_profile_item.xml
+++ b/app/src/main/res/layout/schedule_profile_item.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingBottom="5dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/round_cv"
@@ -13,6 +14,7 @@
         app:layout_constraintStart_toStartOf="parent"
 
         app:cardCornerRadius="12dp"
+
         >
 
         <ImageView
