--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -42,6 +42,7 @@
                     />
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/profile_add_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
@@ -74,6 +75,8 @@
             android:name="com.blackcows.butakaeyak.ui.schedule.ScheduleDetailFragment"
             tools:layout = "@layout/fragment_schedule_detail"
             />
+
+
 
     </LinearLayout>
 
