--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -16,79 +16,119 @@
         android:orientation="vertical"
         >
 
-        <HorizontalScrollView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             >
 
-            <LinearLayout
+            <HorizontalScrollView
+                android:id="@+id/profile_sv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:orientation="horizontal"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 >
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/profile_rv"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
 
                     android:orientation="horizontal"
+                    >
 
-                    tools:listitem="@layout/schedule_profile_item"
-                    tools:itemCount="8"
-                    />
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/profile_rv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
 
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/profile_add_btn"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+
+                        android:orientation="horizontal"
+
+                        tools:listitem="@layout/schedule_profile_item"
+                        tools:itemCount="8"
+                        />
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/profile_add_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:layout_marginStart="14dp"
+                        android:layout_marginEnd="14dp"
+
+                        app:cardCornerRadius="12dp"
+                        >
+                        <ImageView
+                            android:layout_width="74dp"
+                            android:layout_height="74dp"
+
+                            android:src="@drawable/profile_add_btn"
+                            />
+                    </androidx.cardview.widget.CardView>
+
+                </LinearLayout>
+
+            </HorizontalScrollView>
+
+
+
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/schedule_detail_fcv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                app:layout_constraintTop_toBottomOf="@id/profile_sv"
+                app:layout_constraintStart_toStartOf="parent"
+
+                android:layout_marginTop="13dp"
+
+                android:visibility="visible"
+
+                android:name="com.blackcows.butakaeyak.ui.schedule.ScheduleDetailFragment"
+                tools:layout = "@layout/fragment_schedule_detail"
+                />
+
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/schedule_detail_view_pager"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                app:layout_constraintTop_toBottomOf="@id/profile_sv"
+                app:layout_constraintStart_toStartOf="parent"
+
+                android:layout_marginTop="13dp"
+
+                android:name="com.blackcows.butakaeyak.ui.schedule.ScheduleDetailFragment"
+                tools:layout = "@layout/fragment_schedule_detail"
+                />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/login_guide_cl"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                android:background="@color/transparent_gray"
+                >
+
+                <TextView
+                    android:id="@+id/do_login_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
-                    android:layout_marginStart="14dp"
-                    android:layout_marginEnd="14dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
 
-                    app:cardCornerRadius="12dp"
-                    >
-                    <ImageView
-                        android:layout_width="74dp"
-                        android:layout_height="74dp"
+                    android:text="@string/do_login_please_text"
+                    style="@style/body_b"
+                    />
 
-                        android:src="@drawable/profile_add_btn"
-                        />
-                </androidx.cardview.widget.CardView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </LinearLayout>
-
-        </HorizontalScrollView>
-
-
-
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/schedule_detail_fcv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:layout_marginTop="13dp"
-
-            android:visibility="gone"
-
-            android:name="com.blackcows.butakaeyak.ui.schedule.ScheduleDetailFragment"
-            tools:layout = "@layout/fragment_schedule_detail"
-            />
-
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/schedule_detail_view_pager"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:name="com.blackcows.butakaeyak.ui.schedule.ScheduleDetailFragment"
-            tools:layout = "@layout/fragment_schedule_detail"
-            />
-
-
-
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 
 
