--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -1,78 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.schedule.ScheduleFragment"
     android:background="@color/white"
-    android:paddingVertical="13dp"
-    android:paddingHorizontal="13dp"
     >
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <HorizontalScrollView
+        android:id="@+id/profile_sv"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         >
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:orientation="vertical"
             >
 
-            <HorizontalScrollView
-                android:id="@+id/profile_sv"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                android:orientation="horizontal"
                 >
 
-                <LinearLayout
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/profile_rv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+
                     android:orientation="horizontal"
+
+                    tools:listitem="@layout/schedule_profile_item"
+                    tools:itemCount="8"
+                    />
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/profile_add_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:layout_marginStart="14dp"
+                    android:layout_marginEnd="14dp"
+
+                    app:cardCornerRadius="12dp"
                     >
+                    <ImageView
+                        android:layout_width="74dp"
+                        android:layout_height="74dp"
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/profile_rv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-
-                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-
-                        android:orientation="horizontal"
-
-                        tools:listitem="@layout/schedule_profile_item"
-                        tools:itemCount="8"
+                        android:src="@drawable/profile_add_btn"
                         />
+                </androidx.cardview.widget.CardView>
 
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/profile_add_btn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-
-                        android:layout_marginStart="14dp"
-                        android:layout_marginEnd="14dp"
-
-                        app:cardCornerRadius="12dp"
-                        >
-                        <ImageView
-                            android:layout_width="74dp"
-                            android:layout_height="74dp"
-
-                            android:src="@drawable/profile_add_btn"
-                            />
-                    </androidx.cardview.widget.CardView>
-
-                </LinearLayout>
-
-            </HorizontalScrollView>
-
-
+            </LinearLayout>
 
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/schedule_detail_fcv"
@@ -104,32 +93,32 @@
                 tools:layout = "@layout/fragment_schedule_detail"
                 />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/login_guide_cl"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+        </LinearLayout>
 
-                android:background="@color/transparent_gray"
-                >
+    </HorizontalScrollView>
 
-                <TextView
-                    android:id="@+id/do_login_tv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/login_guide_cl"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
 
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/bright_gray_green"
+        >
 
-                    android:text="@string/do_login_please_text"
-                    style="@style/body_b"
-                    />
+        <TextView
+            android:id="@+id/do_login_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </LinearLayout>
+            android:text="@string/do_login_please_text"
+            style="@style/body_b"
+            />
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.core.widget.NestedScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
