--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,14 +7,14 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/icon_search"
-        android:title="@string/title_search" />
+        android:id="@+id/navigation_schedule"
+        android:icon="@drawable/icon_calendar"
+        android:title="@string/title_schedule" />
 
     <item
-        android:id="@+id/navigation_map"
-        android:icon="@drawable/icon_map"
-        android:title="@string/title_map" />
+        android:id="@+id/navigation_note"
+        android:icon="@drawable/icon_note"
+        android:title="@string/title_note" />
 
     <item
         android:id="@+id/navigation_user"
