--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -29,6 +29,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
+        android:visibility="gone"
+
         android:background="@color/bright_gray_green"
         >
 
