fix : TakeAddFragment 아이콘 수정, 사진검색 후 약이름 자동 등록 ( 데이터전달 x ), 리싸이클러뷰 수정

--- a/app/src/main/res/layout/item_recyclerview_name.xml
+++ b/app/src/main/res/layout/item_recyclerview_name.xml
@@ -57,10 +57,11 @@
         android:id="@+id/btn_minus"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="20dp"
         android:background="@drawable/ic_minus"
-        app:layout_constraintTop_toTopOf="@id/et_medicine_name"
         app:layout_constraintBottom_toBottomOf="@id/et_medicine_name"
-        app:layout_constraintStart_toEndOf="@id/et_medicine_name"/>
+        app:layout_constraintStart_toEndOf="@id/et_medicine_name"
+        app:layout_constraintTop_toTopOf="@id/et_medicine_name"
+        app:layout_constraintVertical_bias="0.52" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
