--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:paddingHorizontal="16dp"
     android:paddingVertical="16dp"
-    tools:context=".ui.search.SearchFragment"
-    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
+    tools:context=".ui.search.SearchFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/search_lo_imageblock"
@@ -24,11 +25,11 @@
 
             android:scaleType="fitCenter"
             android:src="@drawable/logo_big_trans"
-            app:tint="#EEEEEE"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="#EEEEEE" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -63,16 +64,16 @@
                 android:id="@+id/search_et_searchtext"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:paddingEnd="32dp"
-                android:background="@null"
                 android:layout_marginStart="4dp"
+                android:background="@null"
                 android:hint="@string/hint_search"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:inputType="text"
                 android:imeOptions="actionDone"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:inputType="text"
+                android:maxLines="1"
+                android:paddingEnd="32dp"
+                android:singleLine="true"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -95,10 +96,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:translationZ="1dp"
-        app:tabSelectedTextColor="@color/back_700"
-        app:tabTextColor="@color/any_700"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_lo_searchbar" />
+        app:layout_constraintTop_toBottomOf="@+id/search_lo_searchbar"
+        app:tabSelectedTextColor="@color/back_700"
+        app:tabTextColor="@color/any_700" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/search_vp"
