--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -99,6 +99,8 @@
         android:layout_height="match_parent"
 
         android:background="@color/bright_gray_green"
+
+        android:visibility="gone"
         >
 
         <TextView
